test_suite/tests/macros/ui/invalid_name_value.stderr
error: custom attribute panicked
 --> tests/macros/ui/invalid_name_value.rs:3:1
  |
3 | #[provide(unknown=10)]
  | ^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: #[provide] has invalid key: unknown
