test_suite/tests/macros/ui/invalid_name_value.rs
use dilib::provide;

#[provide(unknown=10)]
fn get_data() -> usize {
    0
}

fn main(){}